bugfix: local signup, swagger
